# xgboost_churn_project

./: .dockerignore  .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
config/: config.yaml
data/processed/: churn_processed.csv
models/: xgb_churn.pkl
notebooks/: 01_xgboost_churn.ipynb
reports/: churn_output.md
src/data/: load.py
src/features/: preprocess.py
src/models/: evaluate.py  save_load.py  train.py
src/predict_churn_xgboost.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/utils/: io.py
src/visualization/: plots.py
